# MIPT-Homeworks

./: README.md
IndustrialProgramming/: README.md
IndustrialProgramming/1-SolveQuadraticEquation/: Equation.cpp  Equation.hpp  README.md  runner.cpp
IndustrialProgramming/2-SortText/: CMakeLists.txt  README.md  Text.cpp  Text.hpp  main.cpp
IndustrialProgramming/3-Stack/: CMakeLists.txt  HardStack.hpp  main.cpp
IndustrialProgramming/4-Processor/: CMakeLists.txt  main.cpp
IndustrialProgramming/4-Processor/Processor/: CodeToByte.h  Commands.h  GlobalVariables.h  Jump.h  StrSwitch.h  Text.h
IndustrialProgramming/4-Processor/Samples/: Equation  Equation.bit  ForCycle.bit
IndustrialProgramming/5-List/: ArrayList.h  CMakeLists.txt  main.cpp
IndustrialProgramming/6-Differentiator/: CMakeLists.txt  main.cpp
IndustrialProgramming/6-Differentiator/include/: Derivative.hpp  Text.hpp
IndustrialProgramming/6-Differentiator/src/: Derivative.cpp  Text.cpp
KotlinProject/: .gitignore  README.md  pom.xml
ParallelCourse/: README.md
ParallelCourse/ArrayCount/: main.cpp
ParallelCourse/HeatEquation/: MPI.sh  fast.c  fast.csv  fast.out  heat.ipynb  slow.c  slow.csv  slow.out  temp.txt
ParallelCourse/Integral/: criticalSection.c  criticalSection.out  graph.ipynb  reduction.c  reduction.out  time.csv
ParallelCourse/Linear/: a.out  graphs.ipynb  linear.c  main.cpp  time.csv
agile-HW/: README.md
buildSystemsTask/: CMakeLists.txt
buildSystemsTask/A/: CMakeLists.txt  lib.h
complexity/: .gitignore  README.md  source.tex
cpp_homeworks/: .gitignore
(+53 files in other folders)
